# Goedel-Code-Prover

./: .gitignore  README.md  config.example.yaml  config.yaml  main.py  requirements.txt
lean-ray-server/: .env.template  .gitignore  README.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt  setup.sh  setup_local.sh  start_server.sh  test_retry.py
lean-ray-server/Document/: REPL_PIPELINE.md
lean-ray-server/lean-tacs/: .gitignore  Tacs.lean  lake-manifest.json  lakefile.toml
lean-ray-server/lean-tacs/Tacs/: CountNodes.lean  ExtractDefs.lean  InductionGrind.lean  Tactic.lean  UnfoldAll.lean
lean-ray-server/lean-tacs/Test/: test.lean  test_results.lean  test_tactics.lean  test_verina.lean
lean-ray-server/lean_verifier/: __init__.py  __main__.py  client.py  config.py  exceptions.py  healthcheck.py  leanrepl.py  server.py  taskcounter.py  utils.py  verifier.py
lean-ray-server/quickcheck/: .gitignore  Quickcheck.lean  README.md  lake-manifest.json  lakefile.toml
lean-ray-server/quickcheck/DOCUMENT/: OPTIMIZATIONS.md  OR_AND_SAFENORM.md  PREPROCESS_README.md  RESOURCE_LIMITS_GUIDE.md  SAFE_NORM_GUIDE.md  SAFE_NORM_README_CN.md
lean-ray-server/quickcheck/Examples/: CGenExample.lean  CGenTest.lean
lean-ray-server/quickcheck/Quickcheck/: Arbitrary.lean  ArbitraryFueled.lean  Attr.lean  Configuration.lean  DeriveArbitrary.lean  Functions.lean  Gen.lean  (+7 more)
lean-ray-server/test/: REUSE_COUNT_TEST_README.md  STRESS_TEST_README.md  test_interface.py  test_load_balancing_optimization.py  test_ray.py  test_repl.py  test_reuse_count.py  test_server.py  test_tacs.py
(+293 files in other folders)
